Clean code, License and readme documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -9671,3 +9671,4 @@ deps/share/man/man1/moggsplit.1
 deps/share/man/man1/mutagen-inspect.1
 deps/share/man/man1/mutagen-pony.1
 custom_components/hacs/validate/README.md
+custom_components/daikin_residential_altherma/NOTELONTRA.txt
