--- a/.gitignore
+++ b/.gitignore
@@ -9672,3 +9672,12 @@ deps/share/man/man1/mutagen-inspect.1
 deps/share/man/man1/mutagen-pony.1
 custom_components/hacs/validate/README.md
 custom_components/daikin_residential_altherma/NOTELONTRA.txt
+custom_components/daikin_residential_altherma/__pycache__/__init__.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/climate.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/config_flow.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/const.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/daikin_api.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/daikin_base.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/device.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/sensor.cpython-38.pyc
+custom_components/daikin_residential_altherma/__pycache__/switch.cpython-38.pyc
