--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ daikin_puredata.json
 groups.yaml
 home-assistant_v2.db
 home-assistant.log
+home-assistant_v2.db-shm
+home-assistant_v2.db-wal
+home-assistant.log.1
+home-assistant.log.fault
 reset.cmd
 scenes.yaml
 scripts.yaml
@@ -14,6 +18,7 @@ secrets.yaml
 tokenset.json
 .storage/**
 blueprints/**
+custom_components/dhcp/**
 custom_components/hacs/**
 custom_components/sonoff/**
 custom_components/start_time/**
@@ -21,3 +26,5 @@ custom_components/xiaomi_gateway3/**
 custom_components/yandex_station/**
 deps/**
 custom_components/daikin_residential_altherma/.vscode/**
+custom_components/daikin_residential_altherma/__pycache__/**
+
