--- a/custom_components/daikin_residential_altherma/manifest.json
+++ b/custom_components/daikin_residential_altherma/manifest.json
@@ -5,7 +5,8 @@
   "documentation": "https://github.com/speleolontra/daikin_residential_altherma",
   "dependencies": [],
   "codeowners": [
-    "@speleolontra"
+    "@speleolontra",
+    "@jwillemsen"
   ],
   "issue_tracker": "https://github.com/speleolontra/daikin_residential_altherma/issues",
   "requirements": [
