--- a/custom_components/daikin_residential_altherma/manifest.json
+++ b/custom_components/daikin_residential_altherma/manifest.json
@@ -1,17 +1,17 @@
 {
   "domain": "daikin_residential_altherma",
   "name": "Daikin Residential Controller for Altherma",
-  "version": "2.5.1",
-  "documentation": "https://github.com/speleolontra/daikin_residential_altherma",
-  "dependencies": [],
   "codeowners": [
     "@speleolontra",
     "@jwillemsen"
   ],
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/speleolontra/daikin_residential_altherma",
+  "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/speleolontra/daikin_residential_altherma/issues",
   "requirements": [
      "oic==1.4.0"
   ],
-  "iot_class": "cloud_polling",
-  "config_flow": true
+  "version": "2.5.1"
 }
