Only run once a week and added support for manual dispatch
    * .github/workflows/hassfest.yaml:
    * .github/workflows/validate.yml:

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -3,7 +3,8 @@ name: HACS Validate
 on:
   pull_request:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 1 * * SUN'
+  workflow_dispatch:
 
 jobs:
   validate:
