--- a/.github/workflows/hassfest.yaml
+++ b/.github/workflows/hassfest.yaml
@@ -4,7 +4,8 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 1 * * SUN'
+  workflow_dispatch:
 
 jobs:
   validate:
