--- a/custom_components/daikin_residential_altherma/manifest.json
+++ b/custom_components/daikin_residential_altherma/manifest.json
@@ -5,7 +5,7 @@
     "@jwillemsen"
   ],
   "config_flow": true,
-  "dependencies": [],
+  "dependencies": ["application_credentials"],
   "documentation": "https://github.com/jwillemsen/daikin_residential_altherma",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/jwillemsen/daikin_residential_altherma/issues",
