--- a/custom_components/daikin_residential_altherma/manifest.json
+++ b/custom_components/daikin_residential_altherma/manifest.json
@@ -9,8 +9,6 @@
   "documentation": "https://github.com/jwillemsen/daikin_residential_altherma",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/jwillemsen/daikin_residential_altherma/issues",
-  "requirements": [
-     "oic>=1.6.0"
-  ],
+  "requirements": [],
   "version": "3.4.0"
 }
