Migrate to daikin_onecta
    * .github/ISSUE_TEMPLATE/issue_report.md:
    * custom_components/daikin_residential_altherma/__init__.py:
    * custom_components/daikin_residential_altherma/const.py:
    * custom_components/daikin_residential_altherma/daikin_api.py:
    * custom_components/daikin_residential_altherma/daikin_base.py:
    * custom_components/daikin_residential_altherma/device.py:
    * custom_components/daikin_residential_altherma/manifest.json:
    * custom_components/daikin_residential_altherma/strings.json:
    * custom_components/daikin_residential_altherma/translations/en.json:
    * custom_components/daikin_residential_altherma/translations/it.json:
    * custom_components/daikin_residential_altherma/translations/nl.json:
    * custom_components/daikin_residential_altherma/translations/sk.json:
    * hacs.json:
    * readme.md:

--- a/custom_components/daikin_residential_altherma/manifest.json
+++ b/custom_components/daikin_residential_altherma/manifest.json
@@ -1,14 +1,14 @@
 {
-  "domain": "daikin_residential_altherma",
-  "name": "Daikin Residential Controller including Altherma",
+  "domain": "daikin_onecta",
+  "name": "Daikin Onecta",
   "codeowners": [
     "@jwillemsen"
   ],
   "config_flow": true,
   "dependencies": ["application_credentials"],
-  "documentation": "https://github.com/jwillemsen/daikin_residential_altherma",
+  "documentation": "https://github.com/jwillemsen/daikin_onecta",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/jwillemsen/daikin_residential_altherma/issues",
+  "issue_tracker": "https://github.com/jwillemsen/daikin_onecta/issues",
   "requirements": [],
   "version": "4.0.0"
 }
