Run precommit cleanup
    * .github/ISSUE_TEMPLATE/issue_report.md:
    * .github/dependabot.yml:
    * .github/workflows/hassfest.yaml:
    * .github/workflows/precommit.yaml:
    * .github/workflows/validate.yml:
    * .gitignore:
    * custom_components/daikin_onecta/__init__.py:
    * custom_components/daikin_onecta/application_credentials.py:
    * custom_components/daikin_onecta/climate.py:
    * custom_components/daikin_onecta/config_flow.py:
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/coordinator.py:
    * custom_components/daikin_onecta/daikin_api.py:
    * custom_components/daikin_onecta/daikin_base.py:
    * custom_components/daikin_onecta/device.py:
    * custom_components/daikin_onecta/diagnostics.py:
    * custom_components/daikin_onecta/manifest.json:
    * custom_components/daikin_onecta/select.py:
    * custom_components/daikin_onecta/sensor.py:
    * custom_components/daikin_onecta/switch.py:
    * custom_components/daikin_onecta/translations/bg.json:
    * custom_components/daikin_onecta/translations/ca.json:
    * custom_components/daikin_onecta/translations/cs.json:
    * custom_components/daikin_onecta/translations/da.json:
    * custom_components/daikin_onecta/translations/de.json:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/es-419.json:
    * custom_components/daikin_onecta/translations/es.json:
    * custom_components/daikin_onecta/translations/et.json:
    * custom_components/daikin_onecta/translations/fi.json:
    * custom_components/daikin_onecta/translations/fr.json:
    * custom_components/daikin_onecta/translations/he.json:
    * custom_components/daikin_onecta/translations/hu.json:
    * custom_components/daikin_onecta/translations/it.json:
    * custom_components/daikin_onecta/translations/ko.json:
    * custom_components/daikin_onecta/translations/lb.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * cust

--- a/.github/workflows/hassfest.yaml
+++ b/.github/workflows/hassfest.yaml
@@ -4,7 +4,7 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: '0 1 * * SUN'
+    - cron: "0 1 * * SUN"
   workflow_dispatch:
 
 jobs:
@@ -13,4 +13,3 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
       - uses: home-assistant/actions/hassfest@master
-
