--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ custom_components/yandex_station/**
 deps/**
 custom_components/daikin_residential_altherma/.vscode/**
 custom_components/daikin_residential_altherma/__pycache__/**
+
+.idea/
+.venv/
