--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,2 +1,7 @@
 -r requirements_dev.txt
 pytest-homeassistant-custom-component
+anyio
+pytest-asyncio
+pytest-tornasync
+pytest-trio
+pytest-twisted
