--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ default_section = THIRDPARTY
 known_first_party = custom_components.daikin_onecta, tests
 combine_as_imports = true
 
-[pytest]
+[tool:pytest]
 addopts = -qq --cov=custom_components.daikin_onecta
 console_output_style = count
 asyncio_mode = auto
