--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Python
         uses: "actions/setup-python@v5"
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install requirements
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
