--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,4 +33,6 @@ jobs:
             --cov-report=xml \
             tests
       - name: Upload coverage reports to Codecov with GitHub Action
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: jwillemsen/daikin_onecta
