--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -34,5 +34,6 @@ jobs:
             tests
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4
+        with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: jwillemsen/daikin_onecta
