Add test code, run codecov always
    * .github/workflows/tests.yaml:
    * custom_components/daikin_onecta/__init__.py:
    * tests/__init__.py:

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -34,6 +34,7 @@ jobs:
             tests
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4
+        if: always()
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: jwillemsen/daikin_onecta
