--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 default_section = THIRDPARTY
 known_first_party = custom_components.daikin_onecta, tests
 combine_as_imports = true
+force_single_line = "true"
 
 [tool:pytest]
 addopts = -qq --cov=custom_components.daikin_onecta
