--- a/.github/workflows/precommit.yaml
+++ b/.github/workflows/precommit.yaml
@@ -14,16 +14,17 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
-
+      - name: Setup Python
+        uses: "actions/setup-python@v5"
+        with:
+          python-version: "3.12"
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
-
       - name: Install Python modules
         run: |
           pip install --constraint=.github/workflows/constraints.txt pre-commit black flake8 reorder-python-imports
-
       - name: Run pre-commit on all files
         run: |
           pre-commit run --all-files --show-diff-on-failure --color=always
