--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,5 @@
 pre-commit==3.6.2
 flake8==7.0.0
 reorder-python-imports==3.12.0
-homeassistant>=2024.12.0b0
-pytest>=8.3.1
+homeassistant>=2024.12.0b
+pytest
