--- a/custom_components/daikin_onecta/manifest.json
+++ b/custom_components/daikin_onecta/manifest.json
@@ -5,6 +5,7 @@
   "config_flow": true,
   "dependencies": ["application_credentials"],
   "documentation": "https://github.com/jwillemsen/daikin_onecta",
+  "integration_type": "device",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/jwillemsen/daikin_onecta/issues",
   "requirements": [],
