Move all jobs to ubuntu-slim runner
    * .github/workflows/hassfest.yaml:
    * .github/workflows/precommit.yaml:
    * .github/workflows/tests.yaml:
    * .github/workflows/validate.yml:

--- a/.github/workflows/precommit.yaml
+++ b/.github/workflows/precommit.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   precommit:
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-slim"
     name: Pre-commit
     steps:
       - name: Check out the repository
