--- a/.github/workflows/hassfest.yaml
+++ b/.github/workflows/hassfest.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   validate:
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-slim"
     steps:
       - uses: "actions/checkout@v6"
       - uses: home-assistant/actions/hassfest@master
