--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   validate:
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-slim"
     steps:
       - name: HACS validation
         uses: "hacs/action@main"
